--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -1,24 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hch-Yc-SN6">
+                                <rect key="frame" x="173.5" y="611" width="67" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Button"/>
+                                <connections>
+                                    <action selector="startStopButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RXz-yg-pwl"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uto-wL-vbN">
+                                <rect key="frame" x="68" y="611" width="53" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="戻る"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LdR-RH-PVK">
+                                <rect key="frame" x="300" y="611" width="53" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="進む"/>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4MY-ao-5E7">
+                                <rect key="frame" x="50" y="144" width="314" height="367"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4MY-ao-5E7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="0NL-hl-imu"/>
+                            <constraint firstItem="LdR-RH-PVK" firstAttribute="leading" secondItem="Hch-Yc-SN6" secondAttribute="trailing" constant="59.5" id="0SE-dh-y91"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="leading" secondItem="uto-wL-vbN" secondAttribute="trailing" constant="52.5" id="0pK-Yx-Me7"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="baseline" secondItem="uto-wL-vbN" secondAttribute="baseline" id="0vz-vS-Nmb"/>
+                            <constraint firstItem="4MY-ao-5E7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="FHS-Tc-jR5"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="baseline" secondItem="LdR-RH-PVK" secondAttribute="baseline" id="JSl-A8-DjL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4MY-ao-5E7" secondAttribute="trailing" constant="50" id="PCa-Pv-Hkf"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="top" secondItem="4MY-ao-5E7" secondAttribute="bottom" constant="100" id="bgL-Kq-ILR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hch-Yc-SN6" secondAttribute="bottom" constant="220" id="lmq-Px-ciJ"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="centerX" secondItem="4MY-ao-5E7" secondAttribute="centerX" id="znc-5Q-raJ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="62" y="50"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="AQ1-gQ-bfa">
+            <objects>
+                <viewController id="yvd-tm-Fsb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="raE-xa-OQJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yhz-ac-cAq">
+                                <rect key="frame" x="0.0" y="44" width="414" height="718"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euu-rJ-qNC">
+                                <rect key="frame" x="174" y="798" width="67" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="klJ-ot-cAK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Yhz-ac-cAq" firstAttribute="trailing" secondItem="klJ-ot-cAK" secondAttribute="trailing" id="TQe-fC-vkS"/>
+                            <constraint firstItem="Yhz-ac-cAq" firstAttribute="top" secondItem="klJ-ot-cAK" secondAttribute="top" id="WeX-Ex-rUG"/>
+                            <constraint firstItem="Yhz-ac-cAq" firstAttribute="leading" secondItem="klJ-ot-cAK" secondAttribute="leading" id="bPG-XC-MVI"/>
+                            <constraint firstItem="klJ-ot-cAK" firstAttribute="bottom" secondItem="Yhz-ac-cAq" secondAttribute="bottom" constant="100" id="qCX-i2-7Y6"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EMo-0u-ZQR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="817" y="50"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
