画像を追加しました

--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -17,7 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hch-Yc-SN6">
-                                <rect key="frame" x="173.5" y="611" width="67" height="31"/>
+                                <rect key="frame" x="174" y="611" width="67" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="LS2-uk-vT9"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Button"/>
                                 <connections>
@@ -25,68 +28,107 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uto-wL-vbN">
-                                <rect key="frame" x="68" y="611" width="53" height="31"/>
+                                <rect key="frame" x="65" y="611" width="53" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="kZb-oI-cmv"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="戻る"/>
+                                <connections>
+                                    <action selector="backButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YlV-iv-dvq"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LdR-RH-PVK">
-                                <rect key="frame" x="300" y="611" width="53" height="31"/>
+                                <rect key="frame" x="296" y="611" width="53" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="0ph-jw-fCP"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="進む"/>
+                                <connections>
+                                    <action selector="nextButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cjs-L1-l0k"/>
+                                </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4MY-ao-5E7">
-                                <rect key="frame" x="50" y="144" width="314" height="367"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSp-VN-Szd">
+                                <rect key="frame" x="20" y="144" width="374" height="367"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="xF0-g9-mJU" appends="YES" id="AkB-05-8wS"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="4MY-ao-5E7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="0NL-hl-imu"/>
-                            <constraint firstItem="LdR-RH-PVK" firstAttribute="leading" secondItem="Hch-Yc-SN6" secondAttribute="trailing" constant="59.5" id="0SE-dh-y91"/>
-                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="leading" secondItem="uto-wL-vbN" secondAttribute="trailing" constant="52.5" id="0pK-Yx-Me7"/>
-                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="baseline" secondItem="uto-wL-vbN" secondAttribute="baseline" id="0vz-vS-Nmb"/>
-                            <constraint firstItem="4MY-ao-5E7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="FHS-Tc-jR5"/>
-                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="baseline" secondItem="LdR-RH-PVK" secondAttribute="baseline" id="JSl-A8-DjL"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4MY-ao-5E7" secondAttribute="trailing" constant="50" id="PCa-Pv-Hkf"/>
-                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="top" secondItem="4MY-ao-5E7" secondAttribute="bottom" constant="100" id="bgL-Kq-ILR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hch-Yc-SN6" secondAttribute="bottom" constant="220" id="lmq-Px-ciJ"/>
-                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="centerX" secondItem="4MY-ao-5E7" secondAttribute="centerX" id="znc-5Q-raJ"/>
+                            <constraint firstItem="bSp-VN-Szd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3rZ-HS-CCy"/>
+                            <constraint firstItem="bSp-VN-Szd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6SG-C4-hOR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uto-wL-vbN" secondAttribute="bottom" constant="220" id="7dc-AR-gwe"/>
+                            <constraint firstItem="uto-wL-vbN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="8Mj-Wx-Lbs"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dlf-QC-xNv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bSp-VN-Szd" secondAttribute="trailing" constant="20" id="ETg-RC-ngo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LdR-RH-PVK" secondAttribute="trailing" constant="65" id="JJt-hk-HsH"/>
+                            <constraint firstItem="bSp-VN-Szd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="NLg-LU-kM1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LdR-RH-PVK" secondAttribute="bottom" constant="220" id="fHO-LX-Dh9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hch-Yc-SN6" secondAttribute="bottom" constant="220" id="hX6-vY-oz0"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uto-wL-vbN" secondAttribute="trailing" constant="8" symbolic="YES" id="pUW-xk-Inb"/>
+                            <constraint firstItem="LdR-RH-PVK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Hch-Yc-SN6" secondAttribute="trailing" constant="8" symbolic="YES" id="toq-Bx-nDT"/>
+                            <constraint firstItem="Hch-Yc-SN6" firstAttribute="top" secondItem="bSp-VN-Szd" secondAttribute="bottom" constant="100" id="xhL-0J-OJP"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ImageView" destination="bSp-VN-Szd" id="Vll-b3-a22"/>
+                        <outlet property="startStopButton" destination="Hch-Yc-SN6" id="LlJ-5g-ZAS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="xF0-g9-mJU">
+                    <connections>
+                        <segue destination="yvd-tm-Fsb" kind="show" id="Z2U-7i-m3U"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="62" y="50"/>
+            <point key="canvasLocation" x="60.869565217391312" y="49.553571428571423"/>
         </scene>
-        <!--View Controller-->
+        <!--Result View Controller-->
         <scene sceneID="AQ1-gQ-bfa">
             <objects>
-                <viewController id="yvd-tm-Fsb" sceneMemberID="viewController">
+                <viewController id="yvd-tm-Fsb" customClass="ResultViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="raE-xa-OQJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yhz-ac-cAq">
-                                <rect key="frame" x="0.0" y="44" width="414" height="718"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="708"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euu-rJ-qNC">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euu-rJ-qNC">
                                 <rect key="frame" x="174" y="798" width="67" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <segue destination="PWM-Vz-TVZ" kind="unwind" unwindAction="unwind:" id="noR-Bf-J6g"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="klJ-ot-cAK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="klJ-ot-cAK" firstAttribute="bottom" secondItem="euu-rJ-qNC" secondAttribute="bottom" constant="33" id="3JD-9O-ZZW"/>
+                            <constraint firstItem="euu-rJ-qNC" firstAttribute="leading" secondItem="klJ-ot-cAK" secondAttribute="leading" constant="174" id="A4h-IA-PEj"/>
                             <constraint firstItem="Yhz-ac-cAq" firstAttribute="trailing" secondItem="klJ-ot-cAK" secondAttribute="trailing" id="TQe-fC-vkS"/>
                             <constraint firstItem="Yhz-ac-cAq" firstAttribute="top" secondItem="klJ-ot-cAK" secondAttribute="top" id="WeX-Ex-rUG"/>
                             <constraint firstItem="Yhz-ac-cAq" firstAttribute="leading" secondItem="klJ-ot-cAK" secondAttribute="leading" id="bPG-XC-MVI"/>
+                            <constraint firstItem="euu-rJ-qNC" firstAttribute="centerX" secondItem="Yhz-ac-cAq" secondAttribute="centerX" id="j5o-B8-h64"/>
                             <constraint firstItem="klJ-ot-cAK" firstAttribute="bottom" secondItem="Yhz-ac-cAq" secondAttribute="bottom" constant="100" id="qCX-i2-7Y6"/>
+                            <constraint firstItem="euu-rJ-qNC" firstAttribute="top" secondItem="Yhz-ac-cAq" secondAttribute="bottom" constant="36" id="x6X-HJ-aYI"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="gMI-4v-6kp"/>
+                    <connections>
+                        <outlet property="resultImageView" destination="Yhz-ac-cAq" id="a2i-qP-Obd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EMo-0u-ZQR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="PWM-Vz-TVZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="817" y="50"/>
         </scene>
