--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hch-Yc-SN6">
-                                <rect key="frame" x="174" y="611" width="67" height="31"/>
+                                <rect key="frame" x="173.5" y="611" width="67" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="LS2-uk-vT9"/>
                                 </constraints>
@@ -33,7 +33,7 @@
                                     <constraint firstAttribute="height" constant="31" id="kZb-oI-cmv"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="戻る"/>
+                                <buttonConfiguration key="configuration" style="plain" title="戻る"/>
                                 <connections>
                                     <action selector="backButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YlV-iv-dvq"/>
                                 </connections>
@@ -44,7 +44,7 @@
                                     <constraint firstAttribute="height" constant="31" id="0ph-jw-fCP"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="進む"/>
+                                <buttonConfiguration key="configuration" style="plain" title="進む"/>
                                 <connections>
                                     <action selector="nextButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cjs-L1-l0k"/>
                                 </connections>
@@ -77,13 +77,16 @@
                     </view>
                     <connections>
                         <outlet property="ImageView" destination="bSp-VN-Szd" id="Vll-b3-a22"/>
+                        <outlet property="backButton" destination="uto-wL-vbN" id="tlU-uQ-MTz"/>
+                        <outlet property="nextButton" destination="LdR-RH-PVK" id="AEK-qG-KVr"/>
                         <outlet property="startStopButton" destination="Hch-Yc-SN6" id="LlJ-5g-ZAS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="xF0-g9-mJU">
                     <connections>
-                        <segue destination="yvd-tm-Fsb" kind="show" id="Z2U-7i-m3U"/>
+                        <action selector="tapImage:" destination="BYZ-38-t0r" id="G5s-Q6-LkH"/>
+                        <segue destination="yvd-tm-Fsb" kind="show" identifier="result" id="Z2U-7i-m3U"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
@@ -100,10 +103,10 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yhz-ac-cAq">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="708"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euu-rJ-qNC">
-                                <rect key="frame" x="174" y="798" width="67" height="31"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euu-rJ-qNC">
+                                <rect key="frame" x="174" y="744" width="66" height="31"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="戻る"/>
                                 <connections>
                                     <segue destination="PWM-Vz-TVZ" kind="unwind" unwindAction="unwind:" id="noR-Bf-J6g"/>
                                 </connections>
