--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hch-Yc-SN6">
-                                <rect key="frame" x="173.5" y="611" width="67" height="31"/>
+                                <rect key="frame" x="174" y="611" width="67" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="LS2-uk-vT9"/>
                                 </constraints>
@@ -49,7 +49,7 @@
                                     <action selector="nextButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cjs-L1-l0k"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSp-VN-Szd">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bSp-VN-Szd">
                                 <rect key="frame" x="20" y="144" width="374" height="367"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -80,6 +80,7 @@
                         <outlet property="backButton" destination="uto-wL-vbN" id="tlU-uQ-MTz"/>
                         <outlet property="nextButton" destination="LdR-RH-PVK" id="AEK-qG-KVr"/>
                         <outlet property="startStopButton" destination="Hch-Yc-SN6" id="LlJ-5g-ZAS"/>
+                        <outlet property="tapImage" destination="xF0-g9-mJU" id="4ym-8y-p24"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
